# 0g-zk-settlement

./: .gitattributes  .gitignore  Cargo.toml  README.md  build_circuit.sh  curl.py  dockerfile  ecdsa.ts  generate_and_verify.sh  multi_request.sh  package.json
build_ecdsa/: input.json
build_eddsa/: get_proof_input_req.json  input.json  sign_req.json
circuits/: build.sh  main.circom  settle.circom  settle_ecdsa.circom  settle_eddsa.circom  settle_request.circom
circuits/ecdsa/: ecdsa_verify.circom  privkey_to_pubkey.circom
circuits/eddsa/: eddsa_verify.circom
circuits/eth/: flatten_pubkey.circom  privkey_to_addr.circom  pubkey_to_addr.circom
circuits/hasher/: keccak_bytes.circom  pedersen_bytes.circom
circuits/keccak/: keccak.circom
circuits/settlement/: check_balance_trace.circom  check_nonce_trace.circom  commit_account.circom  lookup.circom  verify_trace_signature.circom
circuits/settlement_ecdsa/: check_balance_trace.circom  check_nonce_trace.circom  commit_account.circom  (+1 more)
cli/: zk_settlement_tool.py
contract/: batch_verifier.sol.ejs  batch_verifier_core.sol
doc/: API.md  CLI.md  DESIGN.md
helper/: eddsa.js  helper.js  main.js  request.js  utils.js
js/: check_memory.ts  config.js  prover.js  server.js  setup.js  signer.js
public/: index.html  script.js
scripts/: compile.sh  setup.js
server/: client.js  prover.js  server.js  signer.js  wrapper.js
src/: account.rs  config.js  config.rs  ecdsa.rs  error.rs  eth_keys.rs  groth16.rs  handlers.rs  main.rs  prover.js  request.rs  server.js  setup.js  signer.js  types.rs  utils.rs
(+78 files in other folders)
